slight namespace edits to get library to include necessary imports

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,10 +1,12 @@
 exportPattern("^[[:alpha:]]+")
 import("magrittr")
-importFrom("sangerseqR","readsangerseq", "makeBaseCalls", "peakAmpMatrix", "setAllelePhase")
+import("sangerseqR")
 import("Biostrings")
 import("dplyr")
+import("stringr")
 import("ggplot2")
 import("gamlss")
+import("gamlss.dist")
 import("berryFunctions")
 importFrom("tibble","as_tibble","rowid_to_column")
 importFrom("readr","read_lines")
