main functions in place

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@ import("magrittr")
 import("sangerseqR")
 import("Biostrings")
 import("dplyr")
+import("tidyr")
 import("stringr")
 import("ggplot2")
 import("gamlss")
