--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,10 +9,9 @@ Description: More about what it does (maybe more than one line)
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
-Depends: R (>= 4.1.0)
 BiocViews:
   rnaseq
-Imports: 
+Depends: R (>= 4.1.0),
     ggplot2 (>= 3.4.4),
     Biostrings (>= 2.66.0),
     sangerseqR (>= 1.34.0),
