--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,7 +24,9 @@ Depends: R (>= 4.1.0),
     readr (>= 2.1.4),
     magrittr (>= 2.0.3),
     gamlss (>= 5.4),
-    gamlss.dist (>= 6.1)
+    gamlss.dist (>= 6.1),
+    readxl,
+    writexl
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
