--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: multieditR
 Type: Package
-Title: What the Package Does (Title Case)
+Title: MulteditR Detects Edits in Sanger Sequence Data
 Version: 0.1.0
-Author: Who wrote it
+Author: Mitch Kleusner, Jeremy Chacón
 Maintainer: The package maintainer <yourself@somewhere.net>
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
