--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: multieditR
 Type: Package
 Title: MulteditR Detects Edits in Sanger Sequence Data
 Version: 0.1.0
-Author: Mitch Kleusner, Jeremy Chacón
+Author: Mitch Kluesner, Jeremy Chacón
 Maintainer: The package maintainer <yourself@somewhere.net>
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
