--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
-Package: multieditR
+Package: multiEditR
 Type: Package
-Title: MulteditR Detects Edits in Sanger Sequence Data
+Title: multEditR Detects Base Edits from Sanger Sequencing Data
 Version: 0.1.0
 Author: Mitch Kluesner, Jeremy Chacón
 Maintainer: The package maintainer <yourself@somewhere.net>
