only export certain functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,4 +1,16 @@
-exportPattern("^[[:alpha:]]+")
+#exportPattern("^[[:alpha:]]+")
+export("detect_edits")
+export("detect_edits_batch")
+export("load_parameters_file")
+export("load_example_params")
+export("save_batch_skeleton")
+export("get_batch_results_table")
+export("get_batch_stats_table")
+export("create_multieditR_report")
+export("plot_raw_sample")
+export("plot_trimmed_sample")
+export("plot_editing_barplot")
+export("geom_chromatogram")
 import("magrittr")
 import("sangerseqR")
 import("Biostrings")
