rewrote chromatogram figs to bugfix

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,9 @@ export("save_batch_skeleton")
 export("get_batch_results_table")
 export("get_batch_stats_table")
 export("create_multiEditR_report")
+export("plot_sample_chromatogram")
+export("plot_control_chromatogram")
+export("plot_chromatogram_at_motif")
 export("plot_raw_sample")
 export("plot_trimmed_sample")
 export("plot_editing_barplot")
