detect_edits refactor

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ import("ggplot2")
 import("gamlss")
 import("gamlss.dist")
 import("berryFunctions")
+import("DT")
 importFrom("tibble","as_tibble","rowid_to_column")
 importFrom("readr","read_lines")
 importFrom("plyr","ldply")
