--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export("plot_editing_barplot")
 export("geom_chromatogram")
 import("magrittr")
 import("sangerseqR")
+import("pwalign")
 import("Biostrings")
 import("dplyr")
 import("tidyr")
