--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(plot_editing_barplot)
 export(plot_raw_sample)
 export(plot_sample_chromatogram)
 export(plot_trimmed_sample)
+export(results)
 export(save_batch_skeleton)
 import(ggplot2)
 importFrom(Biostrings,DNAString)
@@ -47,7 +48,6 @@ importFrom(sangerseqR,peakPosMatrix)
 importFrom(sangerseqR,read.abif)
 importFrom(sangerseqR,readsangerseq)
 importFrom(sangerseqR,traceMatrix)
-importFrom(tibble,rowid_to_column)
 importFrom(tidyr,gather)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,pivot_wider)
