--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,8 @@ Encoding: UTF-8
 LazyData: true
 BiocViews:
   rnaseq
-Depends: R (>= 4.1.0),
+Depends: R (>= 4.1.0)
+Imports:
     ggplot2 (>= 3.5.0),
     Biostrings (>= 2.66.0),
     sangerseqR (>= 1.34.0),
@@ -28,7 +29,8 @@ Depends: R (>= 4.1.0),
     rmarkdown,
     readxl,
     writexl
-Suggests: 
+Suggests:  
     testthat (>= 3.0.0)
+Remotes: Bioconductor/pwalign
 Config/testthat/edition: 3
 RoxygenNote: 7.3.2
