--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,10 +10,11 @@ Encoding: UTF-8
 LazyData: true
 BiocViews:
   rnaseq
-Depends: R (>= 4.1.0)
+Depends: R (>= 4.4.0)
 Imports:
+    pwalign (>= 1.2.0),
     ggplot2 (>= 3.5.0),
-    Biostrings (>= 2.66.0),
+    Biostrings (>= 2.71.5),
     sangerseqR (>= 1.34.0),
     tibble (>= 3.2.1),
     stringr (>= 1.5.0),
@@ -25,12 +26,10 @@ Imports:
     magrittr (>= 2.0.3),
     gamlss (>= 5.4),
     gamlss.dist (>= 6.1),
-    pwalign,
     rmarkdown,
     readxl,
     writexl
 Suggests:  
     testthat (>= 3.0.0)
-Remotes: Bioconductor/pwalign
 Config/testthat/edition: 3
 RoxygenNote: 7.3.2
