downgraded to avoid pwalign

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,9 @@ importFrom(Biostrings,DNAString)
 importFrom(Biostrings,countPattern)
 importFrom(Biostrings,matchPattern)
 importFrom(Biostrings,reverseComplement)
+importFrom(Biostrings,alignedPattern)
+importFrom(Biostrings,alignedSubject)
+importFrom(Biostrings,pairwiseAlignment)
 importFrom(dplyr,arrange)
 importFrom(dplyr,as_tibble)
 importFrom(dplyr,case_when)
@@ -38,9 +41,6 @@ importFrom(gamlss.dist,dZAGA)
 importFrom(gamlss.dist,qZAGA)
 importFrom(magrittr,`%>%`)
 importFrom(plyr,ldply)
-importFrom(pwalign,alignedPattern)
-importFrom(pwalign,alignedSubject)
-importFrom(pwalign,pairwiseAlignment)
 importFrom(readxl,read_excel)
 importFrom(rmarkdown,render)
 importFrom(sangerseqR,makeBaseCalls)
