--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,18 +1,20 @@
 Package: multiEditR
 Type: Package
-Title: multEditR Detects Base Edits from Sanger Sequencing Data
+Title: multiEditR Detects Base Edits from Sanger Sequencing Data
 Version: 1.0.0
 Author: Mitch Kluesner, Jeremy Chacón
 Maintainer: Jeremy Chacón <chaco001@umn.edu>
 Description: This package loads sample sanger sequence(s), control sanger sequences or fasta files, and motifs, and detects edits in certain bases using the relative heights of the sanger trace. 
-License: MIT
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
-biocViews: Alignment, SequenceMatching, Sequencing, Genetics
+BiocVersion: 3.18
+BiocViews: Alignment, SequenceMatching, Sequencing, Genetics
 Depends: 
-    pwalign (>= 1.2.0),
+    R (>= 4.3.0)
+Imports: 
     ggplot2 (>= 3.5.0),
-    Biostrings (>= 2.71.5),
+    Biostrings,
     sangerseqR (>= 1.34.0),
     tibble (>= 3.2.1),
     stringr (>= 1.5.0),
@@ -29,5 +31,4 @@ Depends:
     writexl
 Suggests:  
     testthat (>= 3.0.0)
-Config/testthat/edition: 3
 RoxygenNote: 7.3.2
