--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,7 @@ Depends:
     R (>= 4.3.0)
 Imports: 
     ggplot2 (>= 3.5.0),
-    Biostrings,
+    Biostrings (<= 2.70.3),
     sangerseqR (>= 1.34.0),
     tibble (>= 3.2.1),
     stringr (>= 1.5.0),
