--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,12 +13,12 @@ BiocViews: Alignment, SequenceMatching, Sequencing, Genetics
 Depends: 
     R (>= 4.3.0)
 Imports: 
-    ggplot2 (>= 3.5.0),
-    Biostrings (<= 2.70.3),
-    sangerseqR (>= 1.34.0),
+    ggplot2 (>= 3.5.1),
+    Biostrings (== 2.70.3),
+    sangerseqR (>= 1.38.0),
     tibble (>= 3.2.1),
-    stringr (>= 1.5.0),
-    berryFunctions (>= 1.22.0),
+    stringr (>= 1.5.1),
+    berryFunctions (>= 1.22.5),
     tidyr (>= 1.3.0),
     plyr (>= 1.8.9),
     dplyr (>= 1.1.4),
